--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
   "name": "Velocity",
   "description": "Velocity is awesome",
   "version": "1.0",
-
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "browser_action": {
     "default_icon": "resources/VelocityIcon.png",
-    "default_popup": "popup.html"
+    "default_popup": "views/popup.html"
   },
   "icons": {
 
